<resources>
    <string name="app_name">KnowledgeTree</string>
    <string name="train">train</string>
    <string name="guide">guide</string>
    <string name="custom">custom</string>
    <string name="implicit_intent">Intent隐式跳转注意事项</string>
    <string name="implicit_check">Intent隐式需要检查是否存在跳转应用</string>
    <string name="implicit_share">分享到不同应用</string>
    <string name="implicit_filter">过滤到不同应用</string>
    <string name="share_title">选择</string>
    <string name="constrain_layout">ConstrainLayout的使用</string>
    <string name="classloader">类加载</string>
    <string name="use_notification">Notification的使用</string>
    <string name="start_notification">启动通知</string>
    <string name="update_notification">更新通知</string>
    <string name="delete_notification">删除</string>
    <string name="reply">回复信息</string>

    <string name="bookmark">bookmark</string>

    <string name="progress_notification">progress通知</string>
    <string name="progress_title_notification">progress标题</string>
    <string name="expandable_notification">扩展Notification</string>
    <string name="text_notification">大文本</string>
    <string name="group_notification">群组通知</string>
    <string name="use_appbar">appbar</string>
    <string name="action_favorite">偏好</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="share">分享</string>
    <string name="task">任务栈</string>
    <string name="task_activity">任务栈</string>
    <string name="status_about">系统拦 相关</string>
    <string name="service_about">服务相关</string>
    <string name="filter">过滤规则</string>
    <string name="webview_about">WebView</string>
    <string name="ipc">IPC机制</string>
    <string name="test_data">测试客户端调用远程服务的时候，不能执行好使操作</string>
    <string name="ipc_provider">ContentResolver的IPC方式</string>
    <string name="ipc_socket">Socket跨进程方式</string>
    <string name="ipc_binder_poll">binder池</string>
    <string name="audio">录音</string>
    <string name="view">自定义View</string>
    <string name="material">Material</string>
    <string name="my_tickets">我的电影票</string>
    <string name="please_login">请登录</string>
    <string name="thread_poll">线程池</string>
    <string name="rx_study">rxjava 学习</string>
    <string name="window">Window相关</string>

    <string-array name="spinner_item">
        <item>官方文档</item>
        <item>玉刚说学习周</item>
        <item>艺术探索</item>
        <item>LeetCoder</item>
        <item>Think in java</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="scroll_interfere">滑动冲突</string>
</resources>
