<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_classloader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classloader" />


        <Button
            android:id="@+id/btn_ipc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipc" />


        <Button
            android:id="@+id/btn_ipc_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipc_provider" />

        <Button
            android:id="@+id/btn_socket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipc_socket" />


        <Button
            android:id="@+id/btn_binder_poll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipc_binder_poll" />


        <Button
            android:id="@+id/btn_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio" />

        <Button
            android:id="@+id/btn_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view" />

        <Button
            android:id="@+id/btn_thread_poll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thread_poll" />

        <Button
            android:id="@+id/btn_rx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rx_study" />

        <Button
            android:id="@+id/btn_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/window" />

        <Button
            android:id="@+id/btn_interfere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_interfere" />

        <EditText
            android:id="@+id/btn_keyevent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_interfere" />
    </LinearLayout>
</ScrollView>